<resources>
    <string name="app_name">Guac</string>

    <string name="title_login">@string/app_name</string>
    <string name="sign_in_with">Sign in with Apple Music</string>
    <string name="title_details">Details</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_artists">Artists</string>
    <string name="title_albums">Albums</string>
    <string name="title_songs">Songs</string>
    <string name="title_settings">Settings</string>

    <string name="title_library">Library</string>
    <string name="title_for_you">For You</string>
    <string name="title_browse">Browse</string>

    <string name="album_length">%1$s songs, %2$s minutes</string>

    <string name="media_play">Play</string>
    <string name="media_pause">Pause</string>
    <string name="media_stop">Stop</string>
    <string name="media_skip_back">Previous track</string>
    <string name="media_skip_next">Next track</string>
</resources>
