<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_navigation"
            app:startDestination="@id/menu_library">

    <fragment android:id="@+id/menu_library"
              android:name="dev.bmcreations.guacamole.ui.library.LibraryFragment"
              android:label="@string/title_library">
        <action android:id="@+id/show_details_for_album" app:destination="@id/fragment_details" />
        <action android:id="@+id/show_library_playlists" app:destination="@id/fragment_playlists" />
        <action android:id="@+id/show_library_albums" app:destination="@id/fragment_albums" />
        <action android:id="@+id/show_library_artists" app:destination="@id/fragment_artists" />
    </fragment>

    <fragment android:id="@+id/menu_for_you"
        android:name="dev.bmcreations.guacamole.ui.user.UserContentFragment"
        android:label="@string/title_for_you">
    </fragment>

    <fragment android:id="@+id/menu_browse"
        android:name="dev.bmcreations.guacamole.ui.browse.BrowseFragment"
        android:label="@string/title_browse">
    </fragment>

    <fragment android:id="@+id/fragment_playlists"
              android:name="dev.bmcreations.guacamole.ui.library.playlists.LibraryPlaylistFragment"
              android:label="@string/title_playlists">
        <action android:id="@+id/show_details_for_playlist" app:destination="@id/fragment_details" />
    </fragment>

    <fragment android:id="@+id/fragment_artists"
        android:name="dev.bmcreations.guacamole.ui.library.artists.LibraryArtistsFragment"
        android:label="@string/title_playlists">
        <action android:id="@+id/show_details_for_playlist" app:destination="@id/fragment_details" />
    </fragment>

    <fragment android:id="@+id/fragment_albums"
        android:name="dev.bmcreations.guacamole.ui.library.playlists.LibraryPlaylistFragment"
        android:label="@string/title_playlists">
        <action android:id="@+id/show_details_for_playlist" app:destination="@id/fragment_details" />
    </fragment>

    <fragment android:id="@+id/fragment_details"
              android:name="dev.bmcreations.guacamole.ui.details.AlbumDetailFragment"
              android:label="@string/title_details" />

</navigation>
